# bsm2-baseline

./: .gitignore  ENGINE-DECISION.md  README.md  USAGE.md  VALIDATION.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: baseline.yaml  bulking.yaml  normal_4wk.yaml  normal_5yr.yaml  open_loop.yaml  power.yaml  scenarios.yaml  smoke.yaml
scripts/: run_baseline.py  run_logged_realization.py  run_one_realization.py  run_power.py  run_scenarios.py  upload_watcher.sh
src/bsm2_baseline/: __init__.py  __main__.py  cli.py  config.py  energy.py  export.py  interfaces.py  plots.py  runner.py  scenarios.py  variables.py
src/bsm2_baseline/engines/: __init__.py  qsdsan_bsm2.py
src/bsm2_baseline/influent/: __init__.py  generator.py  params.py  tables.py
src/bsm2_baseline/measurement/: __init__.py  actuators.py  noise.py  sensors.py
tests/: test_config.py  test_energy.py  test_export.py  test_influent.py  test_measurement.py  test_qsdsan.py  test_runner.py  test_scenarios.py
ui/: app.py
